--- a/css/index.css
+++ b/css/index.css
@@ -433,7 +433,7 @@ span {
 
 .card {
     margin: 10px;
-    background-color: #fff;
+    background-color: var(--bg-color);
     border-radius: 10px;
     box-shadow: 0 2px 20px rgba(0, 0, 0, 0.2);
     overflow: hidden;
@@ -500,7 +500,7 @@ span {
 }
 
 .user-info small {
-    color: #545d7a;
+    color: var(--text-color);
 }
 
 .profile-img {
