--- a/css/index.css
+++ b/css/index.css
@@ -213,19 +213,6 @@ header.shadow {
     color: var(--hover);
 }
 
-.btn {
-    display: inline-block;
-    background: var(--main-color);
-    color: #fff;
-    padding: 0.7rem 1.3rem;
-    border-radius: 0.5rem;
-}
-
-.btn:hover {
-    background: var(--hover);
-}
-
-
 .about-container {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -563,7 +550,7 @@ span {
 @media(max-width:1060px) {
     .testimonial-box {
         width: 45%;
-        padding: 10px;
+        padding: 20px;
     }
 }
 
@@ -672,7 +659,409 @@ form textarea {
 .copyright a {
     color: #22cf91;
 }
+::selection{
+    color: #fff;
+    background: #7d2ae8;
+  }
+  .view-modal, .popup{
+    position: absolute;
+    left: 50%;
+  }
+  
+  .view-modal{
+    opacity: 0; /* Начальная непрозрачность */
+    transition: opacity 1s ease-in-out; /* Плавное появление */
+    bottom: 5%;
+    left: 90%;
+    color: #e8e4ee;
+    font-weight: bold;
+    font-size: 18px;
+    padding: 10px 25px;
+    fill: var(--text-color);
+    position: fixed;
+    z-index: 99;
+  }
 
+  .popup{
+    position: fixed;
+    background: rgb(255, 254, 254);
+    padding: 25px;
+    border-radius: 15px;
+    top: 10%;
+    max-width: 380px;
+    width: 100%;
+    opacity: 0;
+    pointer-events: none;
+    box-shadow: 0px 10px 15px rgba(0,0,0,0.1);
+    transform: translate(-50%, -50%) scale(1.2);
+    transition: top 0s 0.2s ease-in-out,
+                opacity 0.2s 0s ease-in-out,
+                transform 0.2s 0s ease-in-out;
+  }
+  .popup.show{
+    top: 50%;
+    left: 50%;
+    opacity: 1;
+    pointer-events: auto;
+    transform:translate(-50%, -50%) scale(1);
+    transition: top 0s 0s ease-in-out,
+                opacity 0.2s 0s ease-in-out,
+                transform 0.2s 0s ease-in-out;
+  
+  }
+  .popup :is(.header, .icons, .field){
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  .popup .header{
+    padding-bottom: 15px;
+    border-bottom: 1px solid #ebedf9;
+  }
+  .header span{
+    font-size: 21px;
+    font-weight: 600;
+  }
+  .header .close, .icons a{
+    display: flex;
+    align-items: center;
+    border-radius: 50%;
+    justify-content: center;
+    transition: all 0.3s ease-in-out;
+  } 
+  .header .close{
+    color: #878787;
+    font-size: 17px;
+    background: #f3f3f3;
+    height: 33px;
+    width: 33px;
+    cursor: pointer;
+  }
+  .header .close:hover{
+    background: #ebedf9;
+  }
+  .popup .content{
+    margin: 20px 0;
+  }
+  .popup .icons{
+    margin: 15px 0 20px 0;
+  }
+  .content p{
+    font-size: 16px;
+  }
+  .content .icons a{
+    height: 50px;
+    width: 50px;
+    font-size: 20px;
+    text-decoration: none;
+    border: 1px solid transparent;
+  }
+  .icons a i{
+    transition: transform 0.3s ease-in-out;
+  }
+  .icons a:nth-child(1){
+    color: #1877F2;
+    border-color: #b7d4fb;
+  }
+  .icons a:nth-child(1):hover{
+    background: #1877F2;
+  }
+  .icons a:nth-child(2){
+    color: #46C1F6;
+    border-color: #b6e7fc;
+  }
+  .icons a:nth-child(2):hover{
+    background: #46C1F6;
+  }
+  .icons a:nth-child(3){
+    color: #e1306c;
+    border-color: #f5bccf;
+  }
+  .icons a:nth-child(3):hover{
+    background: #e1306c;
+  }
+  .icons a:nth-child(4){
+    color: #25D366;
+    border-color: #bef4d2;
+  }
+  .icons a:nth-child(4):hover{
+    background: #25D366;
+  }
+  .icons a:nth-child(5){
+    color: #0088cc;
+    border-color: #b3e6ff;
+  }
+  .icons a:nth-child(5):hover{
+    background: #0088cc;
+  }
+  .icons a:hover{
+    color: #fff;
+    border-color: transparent;
+  }
+  .icons a:hover i{
+    transform: scale(1.2);
+  }
+  .content .field{
+    display: none;
+    margin: 12px 0 -5px 0;
+    height: 45px;
+    border-radius: 4px;
+    padding: 0 5px;
+    border: 1px solid #757171;
+  }
+
+
+  /* Hire Btn*/
+
+.btn:hover {
+    background: var(--hover);
+}
+
+  .btn{
+    display: inline-block;
+    background: var(--main-color);
+    color: #fff;
+    padding: 0.7rem 1.3rem;
+    border-radius: 0.5rem;
+  }
+  
+  [type="checkbox"]:checked,
+  [type="checkbox"]:not(:checked){
+    position: absolute;
+    left: -9999px;
+  }
+  .modal-btn:checked + label,
+  .modal-btn:not(:checked) + label{
+    position: relative;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 500;
+    font-size: 15px;
+    line-height: 2;
+    height: 50px;
+    transition: all 200ms linear;
+    border-radius: 4px;
+    width: 240px;
+    letter-spacing: 1px;
+    display: -webkit-inline-flex;
+    display: -ms-inline-flexbox;
+    display: inline-flex;
+    -webkit-align-items: center;
+    -moz-align-items: center;
+    -ms-align-items: center;
+    align-items: center;
+    -webkit-justify-content: center;
+    -moz-justify-content: center;
+    -ms-justify-content: center;
+    justify-content: center;
+    -ms-flex-pack: center;
+    text-align: center;
+      -ms-flex-item-align: center;
+      align-self: center;
+    border: none;
+    cursor: pointer;
+    background-color: var(--main-color);
+    color: #ffeba7;
+    box-shadow: 0 12px 35px 0 rgba(16,39,112,.25);
+  }
+  .modal-btn:not(:checked) + label:hover{
+    background-color: var(--hover);
+    color: #102770;
+  }
+  .modal-btn:checked + label .uil,
+  .modal-btn:not(:checked) + label .uil{
+    margin-left: 10px;
+    font-size: 18px;
+  }
+  .modal-btn:checked + label:after,
+  .modal-btn:not(:checked) + label:after{
+    position: fixed;
+    top: 80px;
+    right: 30px;
+    z-index: 110;
+    width: 40px;
+    border-radius: 3px;
+    height: 30px;
+    text-align: center;
+    line-height: 30px;
+    font-size: 18px;
+    background-color: #ffeba7;
+    color: #102770;
+    font-family: 'unicons';
+    content: 'x'; 
+    box-shadow: 0 12px 25px 0 rgba(16,39,112,.25);
+    transition: all 200ms linear;
+    opacity: 0;
+    pointer-events: none;
+    transform: translateY(20px);
+  }
+  .modal-btn:checked + label:hover:after,
+  .modal-btn:not(:checked) + label:hover:after{
+    background-color: var(--main-color);
+    color: #ffeba7;
+  }
+  .modal-btn:checked + label:after{
+    transition: opacity 300ms 300ms ease, transform 300ms 300ms ease, background-color 250ms linear, color 250ms linear;
+    opacity: 1;
+    pointer-events: auto;
+    transform: translateY(0);
+  }
+  .modal{
+    position: fixed;
+    display: block;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    -ms-flex-pack: center;
+    justify-content: center;
+    margin: 0 auto;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 100;
+    overflow-x: hidden;
+    background-color: rgba(31,32,41,.75);
+    pointer-events: none;
+    opacity: 0;
+    transition: opacity 250ms 700ms ease;
+  }
+  .modal-btn:checked ~ .modal{
+    pointer-events: auto;
+    opacity: 1;
+    transition: all 300ms ease-in-out;
+  }
+  .modal-wrap {
+    position: relative;
+    display: block;
+    width: 100%;
+    max-width: 400px;
+    margin: 0 auto;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    border-radius: 4px;
+    overflow: hidden;
+    padding-bottom: 20px;
+    background-color: #fff;
+      -ms-flex-item-align: center;
+      align-self: center;
+      box-shadow: 0 12px 25px 0 rgba(199,175,189,.25);
+    opacity: 0;
+    transform: scale(0.6);
+    transition: opacity 250ms 250ms ease, transform 300ms 250ms ease;
+    justify-content: center;
+  }
+  .popup-card {
+    background-color: #fff;
+    border-radius: 10px;
+    padding: 20px;
+    width: 350px;
+    display: flex;
+    flex-direction: column;
+    margin-left: 5%;
+  }
+  
+  .title {
+    font-size: 24px;
+    font-weight: 600;
+    text-align: center;
+    color: #000;
+  }
+  
+  .form {
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .group {
+    position: relative;
+  }
+  
+  .form .group label {
+    font-size: 14px;
+    color: rgb(99, 102, 102);
+    position: absolute;
+    top: -10px;
+    left: 10px;
+    background-color: #fff;
+    transition: all .3s ease;
+  }
+  
+  .form .group input,
+  .form .group textarea {
+    padding: 10px;
+    border-radius: 5px;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    margin-bottom: 20px;
+    outline: 0;
+    width: 100%;
+    background-color: transparent;
+  }
+  
+  .form .group input:placeholder-shown+ label, .form .group textarea:placeholder-shown +label {
+    top: 10px;
+    background-color: transparent;
+  }
+  
+  .form .group input:focus,
+  .form .group textarea:focus {
+    border-color: var(--main-color);
+  }
+  
+  .form .group input:focus+ label, .form .group textarea:focus +label {
+    top: -10px;
+    left: 10px;
+    background-color: var(--bg-color);
+    color: var(--main-color);
+    font-weight: 600;
+    font-size: 14px;
+  }
+  
+  .form .group textarea {
+    resize: none;
+    height: 100px;
+  }
+  
+  .form button {
+    background-color: var(--main-color);
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    padding: 10px;
+    font-size: 16px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+  }
+  
+  .form button:hover {
+    background-color: var(--hover);
+  }
+  
+  
+  .modal-btn:checked ~ .modal .modal-wrap{
+    opacity: 1;
+    transform: scale(1);
+    transition: opacity 250ms 500ms ease, transform 350ms 500ms ease;
+  }
+  
+  .modal-btn:checked ~ .logo img {
+      filter: brightness(100%);
+    transition: all 250ms linear;
+  }
+  
+  
+  
+  @media screen and (max-width: 500px) {
+    .modal-wrap {
+      width: calc(100% - 40px);
+      padding-bottom: 15px;
+    }
+    .modal-wrap p {
+      padding: 15px 20px 0 20px;
+    }
+  }
+ 
 /* For Mobile */
 
 @media (max-width:1400px) {
@@ -708,7 +1097,7 @@ form textarea {
     }
 }
 
-@media (max-width: 881px) {
+@media (max-width: 930px) {
     :root {
         --big-font: 2.7rem;
         --medium-font: 1.4rem;
@@ -721,9 +1110,12 @@ form textarea {
     .home-img img {
         width: 320px;
     }
+    .view-modal{
+        left: 0.5%;
+    }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 800px) {
     :root {
         --big-font: 2.4rem;
         --medium-font: 1.2rem;
@@ -766,6 +1158,18 @@ form textarea {
         top: 1.4rem;
         right: 2rem;
     }
+
+    .lang{
+        position: absolute;
+        right: 5px;
+        top:70px;
+        display: flex;
+        align-items: center;
+    }
+
+    .kz{
+        margin-right: -20px;
+      }
 
     .col img {
         width: 40%;
@@ -821,8 +1225,9 @@ form textarea {
         margin-left: 25%;
     }
 
-    .layer {
-        display: none;
+    .view-modal{
+        left: 80%;
+        z-index: 99;
     }
 
 }
@@ -963,4 +1368,11 @@ form textarea {
     .contact-button {
         margin-left: 25%;
     }
+    .view-modal{
+        left: 75%;
+        bottom: 3%;
+    }
+    .popup-card {
+        margin-left: 4%;
+      }
 }
