--- a/css/index.css
+++ b/css/index.css
@@ -325,9 +325,9 @@ span {
 }
 
 .services-content {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, auto));
-    justify-content: center;
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
     gap: 1rem;
     margin-top: 2rem;
 }
@@ -1422,7 +1422,7 @@ form textarea {
 
 .bounce-animation {
     animation: bounce 1.5s infinite;
-}  
+}
 
 @keyframes bounce {
     0%, 100% {
@@ -1497,7 +1497,7 @@ form textarea {
     }
 
     .services-box {
-        width: auto;
+        width: 200px;
     }
 
 }
